package fr.unilim.iut;

public class Constante {

    public static final int ESPACEJEU_LONGUEUR = 150;
    public static final int ESPACEJEU_HAUTEUR = 100;

    public static final int VAISSEAU_LONGUEUR = 30;
    public static final int VAISSEAU_HAUTEUR = 20;
    public static final int VAISSEAU_VITESSE = 4;

    public static final char MARQUE_FIN_LIGNE = '\n';
    public static final char MARQUE_VIDE = '.';
    public static final char MARQUE_VAISSEAU = 'V';
    public static final char MARQUE_MISSILE = 'M';

    public static final int MISSILE_LONGUEUR = 15;
    public static final int MISSILE_HAUTEUR = 20;
    public static final int MISSILE_VITESSE = 5;

}
